# ndt_omp

./: .gitignore  CMakeLists.txt  README.md
apps/: align.cpp  match.cpp  odom_kitti.cpp  workflow_scanner.cpp
include/pclomp/: ndt_omp.h  ndt_omp_impl4.hpp  voxel_grid_covariance_omp.h
scripts/: odom_kitti.sh
src/pclomp/: ndt_omp.cpp
